--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,18 +1,16 @@
 [build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["setuptools>=61.0.0", "wheel>=0.37.1"]
+build-backend = "setuptools.build_meta"
 
-[tool.poetry]
+[project]
 name = "pytoil"
 version = "0.30.1"
 description = "CLI to automate the development workflow."
-authors = ["Tom Fleet <tomfleet2018@gmail.com>"]
-maintainers = ["Tom Fleet <tomfleet2018@gmail.com>"]
-license = "Apache Software License 2.0"
-homepage = "https://github.com/FollowTheProcess/pytoil"
 readme = "README.md"
-repository = "https://github.com/FollowTheProcess/pytoil"
-documentation = "https://FollowTheProcess.github.io/pytoil/"
+requires-python = ">=3.9"
+license = { file = "LICENSE" }
+authors = [{ name = "Tom Fleet" }, { email = "tomfleet2018@gmail.com" }]
+maintainers = [{ name = "Tom Fleet" }, { email = "tomfleet2018@gmail.com" }]
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Environment :: Console",
@@ -31,56 +29,60 @@ classifiers = [
     "Topic :: Utilities",
     "Typing :: Typed",
 ]
-include = ["pytoil/py.typed"]
 keywords = ["cli", "python", "developer-tools", "automation"]
+dependencies = [
+    "asyncclick==8.0.3.2",
+    "anyio==3.5.0",
+    "httpx[http2]==0.22.0",
+    "aiofiles==0.8.0",
+    "PyYAML==6.0",
+    "rich==12.3.0",
+    "thefuzz[speedup]==0.19.0",
+    "cookiecutter==1.7.3",
+    "virtualenv==20.14.1",
+    "pydantic==1.9.0",
+    "humanize==4.0.0",
+    "questionary==1.10.0",
+    "rtoml==0.7.1",
+]
 
-[tool.poetry.scripts]
+[project.urls]
+homepage = "https://github.com/FollowTheProcess/pytoil"
+documentation = "https://FollowTheProcess.github.io/pytoil/"
+repository = "https://github.com/FollowTheProcess/pytoil"
+
+[project.optional-dependencies]
+dev = [
+    "pytest==7.1.2",
+    "bump2version==1.0.1",
+    "flake8==4.0.1",
+    "flake8-bugbear==22.4.25",
+    "isort==5.10.1",
+    "nox==2022.1.7",
+    "black==22.3.0",
+    "pytest-cov==3.0.0",
+    "coverage[toml]==6.3.2",
+    "mypy==0.950",
+    "mkdocs==1.3.0",
+    "mkdocs-material==8.2.13",
+    "types-click==7.1.8",
+    "pytest-asyncio==0.18.3",
+    "pytest-httpx==0.20.0",
+    "types-aiofiles==0.8.8",
+    "types-PyYAML==6.0.7",
+    "pytest-mock==3.7.0",
+    "pytest-randomly==3.11.0",
+    "pre-commit==2.18.1",
+    "freezegun==1.2.1",
+    "pytest-clarity==1.0.1",
+    "pip-audit==2.1.1",
+]
+
+[project.scripts]
 pytoil = "pytoil.cli.root:main"
 
-[tool.poetry.urls]
-Documentation = "https://FollowTheProcess.github.io/pytoil/"
-
-[tool.poetry.dependencies]
-python = "^3.9"
-asyncclick = "8.0.3.2"
-anyio = "3.5.0"
-httpx = { extras = ["http2"], version = "0.22.0" }
-aiofiles = "0.8.0"
-PyYAML = "6.0"
-rich = "12.3.0"
-thefuzz = { extras = ["speedup"], version = "0.19.0" }
-cookiecutter = "1.7.3"
-virtualenv = "20.14.1"
-pydantic = "1.9.0"
-humanize = "4.0.0"
-questionary = "1.10.0"
-rtoml = "0.7.1"
-
-[tool.poetry.dev-dependencies]
-pytest = "7.1.2"
-bump2version = "1.0.1"
-flake8 = "4.0.1"
-flake8-bugbear = "22.4.25"
-flake8-comprehensions = "3.8.0"
-isort = "5.10.1"
-nox = "2022.1.7"
-black = "22.3.0"
-pytest-cov = "3.0.0"
-coverage = { extras = ["toml"], version = "6.3.2" }
-mypy = "0.950"
-mkdocs = "1.3.0"
-mkdocs-material = "8.2.13"
-types-click = "7.1.8"
-pytest-asyncio = "0.18.3"
-pytest-httpx = "0.20.0"
-types-aiofiles = "0.8.8"
-types-PyYAML = "6.0.7"
-pytest-mock = "3.7.0"
-pytest-randomly = "3.11.0"
-pre-commit = "2.18.1"
-freezegun = "1.2.1"
-pytest-clarity = "1.0.1"
-pip-audit = "2.1.1"
+[tool.setuptools]
+package-data = { "pytoil" = ["py.typed"] }
 
 [tool.isort]
 # Added for compatibility with black
@@ -90,10 +92,10 @@ profile = "black"
 omit = [
     "*__init__.py",
     "*__main__.py",
-    "pytoil/cli/*",
+    "src/pytoil/cli/*",
     "*exceptions.py",
-    "pytoil/environments/base.py",
-    "pytoil/starters/base.py",
+    "src/pytoil/environments/base.py",
+    "src/pytoil/starters/base.py",
 ]
 branch = true
 
@@ -118,11 +120,12 @@ ignore_errors = true
 
 [tool.pytest.ini_options]
 asyncio_mode = "strict"
-minversion = "6.0"
+minversion = "7.0"
 addopts = ["-ra", "--strict-markers", "--strict-config"]
 xfail_strict = true
 filterwarnings = ["error"]
 log_cli_level = "info"
+pythonpath = ["src"]
 testpaths = ["tests"]
 
 [tool.pycln]
