--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,16 @@
+[bumpversion]
+current_version = 0.30.1
+commit = True
+tag = True
+
+[bumpversion:file:pytoil/__init__.py]
+search = __version__ = "{current_version}"
+replace = __version__ = "{new_version}"
+
+[bumpversion:file:pyproject.toml]
+search = version = "{current_version}"
+replace = version = "{new_version}"
+
 [flake8]
 exclude =
     .git,
