Fix lint issues

--- a/setup.cfg
+++ b/setup.cfg
@@ -29,6 +29,6 @@ exclude =
 max-complexity = 15
 max-line-length = 120
 extend-ignore =
-    E203, # Black compatability: whitespace before :
-    W503, # Black compatability: line break before binary operator
+    E203, # Black compatibility: whitespace before :
+    W503, # Black compatibility: line break before binary operator
 extend-select = B9
