--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,9 @@
 [build-system]
-requires = ["setuptools>=61.0.0", "wheel>=0.37.1"]
+requires = ["setuptools>=61.0.0", "setuptools-scm>=6.4.2"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "pytoil"
-version = "0.30.1"
 description = "CLI to automate the development workflow."
 readme = "README.md"
 requires-python = ">=3.9"
@@ -30,6 +29,7 @@ classifiers = [
     "Typing :: Typed",
 ]
 keywords = ["cli", "python", "developer-tools", "automation"]
+dynamic = ["version"]
 dependencies = [
     "asyncclick==8.0.3.2",
     "anyio==3.5.0",
@@ -81,8 +81,8 @@ dev = [
 [project.scripts]
 pytoil = "pytoil.cli.root:main"
 
-[tool.setuptools]
-package-data = { "pytoil" = ["py.typed"] }
+[tool.setuptools_scm]
+write_to = "src/pytoil/_version.py"
 
 [tool.isort]
 # Added for compatibility with black
