--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,10 @@
 [build-system]
-requires = ["setuptools>=61.0.0", "setuptools-scm>=6.4.2"]
+requires = ["setuptools>=61.0.0", "wheel>=0.37.1"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "pytoil"
+version = "0.30.1"
 description = "CLI to automate the development workflow."
 readme = "README.md"
 requires-python = ">=3.9"
