Use pyproject-fmt as a pre-commit hook

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -22,6 +22,11 @@ repos:
       - id: pyupgrade
         args: [--py39-plus]
 
+  - repo: https://github.com/tox-dev/pyproject-fmt
+    rev: "0.3.3"
+    hooks:
+      - id: pyproject-fmt
+
   - repo: https://github.com/PyCQA/isort
     rev: "5.10.1"
     hooks:
