--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,84 +1,92 @@
 [build-system]
-requires = ["setuptools>=61.0.0", "wheel>=0.37.1"]
 build-backend = "setuptools.build_meta"
+requires = [
+  "setuptools>=61",
+  "wheel>=0.37.1",
+]
 
 [project]
 name = "pytoil"
 version = "0.30.1"
 description = "CLI to automate the development workflow."
 readme = "README.md"
-requires-python = ">=3.9"
-license = { file = "LICENSE" }
-authors = [{ name = "Tom Fleet" }, { email = "tomfleet2018@gmail.com" }]
-maintainers = [{ name = "Tom Fleet" }, { email = "tomfleet2018@gmail.com" }]
-classifiers = [
-    "Development Status :: 3 - Alpha",
-    "Environment :: Console",
-    "Intended Audience :: Developers",
-    "License :: OSI Approved :: Apache Software License",
-    "Natural Language :: English",
-    "Operating System :: MacOS :: MacOS X",
-    "Operating System :: POSIX :: Linux",
-    "Operating System :: Microsoft :: Windows",
-    "Operating System :: OS Independent",
-    "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3 :: Only",
-    "Programming Language :: Python :: 3.9",
-    "Programming Language :: Python :: 3.10",
-    "Topic :: Software Development",
-    "Topic :: Utilities",
-    "Typing :: Typed",
+keywords = [
+  "automation",
+  "cli",
+  "developer-tools",
+  "python",
 ]
-keywords = ["cli", "python", "developer-tools", "automation"]
+license = { file = "LICENSE" }
+maintainers = [ { name = "Tom Fleet" }, { email = "tomfleet2018@gmail.com" } ]
+authors = [ { name = "Tom Fleet" }, { email = "tomfleet2018@gmail.com" } ]
+requires-python = ">=3.9"
 dependencies = [
-    "asyncclick==8.0.3.2",
-    "anyio==3.5.0",
-    "httpx[http2]==0.22.0",
-    "aiofiles==0.8.0",
-    "PyYAML==6.0",
-    "rich==12.3.0",
-    "thefuzz[speedup]==0.19.0",
-    "cookiecutter==1.7.3",
-    "virtualenv==20.14.1",
-    "pydantic==1.9.0",
-    "humanize==4.0.0",
-    "questionary==1.10.0",
-    "rtoml==0.7.1",
+  "aiofiles==0.8",
+  "anyio==3.5",
+  "asyncclick==8.0.3.2",
+  "cookiecutter==1.7.3",
+  "httpx[http2]==0.22",
+  "humanize==4",
+  "pydantic==1.9",
+  "PyYAML==6",
+  "questionary==1.10",
+  "rich==12.3",
+  "rtoml==0.7.1",
+  "thefuzz[speedup]==0.19",
+  "virtualenv==20.14.1",
+]
+classifiers = [
+  "Development Status :: 3 - Alpha",
+  "Environment :: Console",
+  "Intended Audience :: Developers",
+  "License :: OSI Approved :: Apache Software License",
+  "Natural Language :: English",
+  "Operating System :: MacOS :: MacOS X",
+  "Operating System :: POSIX :: Linux",
+  "Operating System :: Microsoft :: Windows",
+  "Operating System :: OS Independent",
+  "Programming Language :: Python :: 3",
+  "Programming Language :: Python :: 3 :: Only",
+  "Programming Language :: Python :: 3.9",
+  "Programming Language :: Python :: 3.10",
+  "Topic :: Software Development",
+  "Topic :: Utilities",
+  "Typing :: Typed"
+]
+[project.optional-dependencies]
+dev = [
+  "black==22.3",
+  "coverage[toml]==6.3.2",
+  "flake8==4.0.1",
+  "flake8-bugbear==22.4.25",
+  "freezegun==1.2.1",
+  "isort==5.10.1",
+  "mkdocs==1.3",
+  "mkdocs-material==8.2.13",
+  "mypy==0.950",
+  "nox==2022.1.7",
+  "pip-audit==2.1.1",
+  "pre-commit==2.18.1",
+  "pytest==7.1.2",
+  "pytest-asyncio==0.18.3",
+  "pytest-clarity==1.0.1",
+  "pytest-cov==3",
+  "pytest-httpx==0.20",
+  "pytest-mock==3.7",
+  "pytest-randomly==3.11",
+  "types-aiofiles==0.8.8",
+  "types-click==7.1.8",
+  "types-PyYAML==6.0.7",
 ]
 
 [project.urls]
-homepage = "https://github.com/FollowTheProcess/pytoil"
 documentation = "https://FollowTheProcess.github.io/pytoil/"
+homepage = "https://github.com/FollowTheProcess/pytoil"
 repository = "https://github.com/FollowTheProcess/pytoil"
-
-[project.optional-dependencies]
-dev = [
-    "pytest==7.1.2",
-    "flake8==4.0.1",
-    "flake8-bugbear==22.4.25",
-    "isort==5.10.1",
-    "nox==2022.1.7",
-    "black==22.3.0",
-    "pytest-cov==3.0.0",
-    "coverage[toml]==6.3.2",
-    "mypy==0.950",
-    "mkdocs==1.3.0",
-    "mkdocs-material==8.2.13",
-    "types-click==7.1.8",
-    "pytest-asyncio==0.18.3",
-    "pytest-httpx==0.20.0",
-    "types-aiofiles==0.8.8",
-    "types-PyYAML==6.0.7",
-    "pytest-mock==3.7.0",
-    "pytest-randomly==3.11.0",
-    "pre-commit==2.18.1",
-    "freezegun==1.2.1",
-    "pytest-clarity==1.0.1",
-    "pip-audit==2.1.1",
-]
 
 [project.scripts]
 pytoil = "pytoil.cli.root:main"
+
 
 [tool.isort]
 # Added for compatibility with black
@@ -86,20 +94,20 @@ profile = "black"
 
 [tool.coverage.run]
 omit = [
-    "*__init__.py",
-    "*__main__.py",
-    "src/pytoil/cli/*",
-    "*exceptions.py",
-    "src/pytoil/environments/base.py",
-    "src/pytoil/starters/base.py",
+  "*__init__.py",
+  "*__main__.py",
+  "src/pytoil/cli/*",
+  "*exceptions.py",
+  "src/pytoil/environments/base.py",
+  "src/pytoil/starters/base.py"
 ]
 branch = true
 
 [tool.coverage.report]
-exclude_lines = ["# pragma: no cover", "def __repr__"]
+exclude_lines = [ "# pragma: no cover", "def __repr__" ]
 
 [tool.mypy]
-files = ["pytoil/**/*.py", "noxfile.py"]
+files = [ "pytoil/**/*.py", "noxfile.py" ]
 python_version = "3.9"
 ignore_missing_imports = true
 strict = true
@@ -108,7 +116,7 @@ disallow_untyped_decorators = false
 plugins = "pydantic.mypy"
 show_error_codes = true
 warn_unreachable = true
-enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
+enable_error_code = [ "ignore-without-code", "redundant-expr", "truthy-bool" ]
 
 [[tool.mypy.overrides]]
 module = "tests.*"
@@ -117,12 +125,12 @@ ignore_errors = true
 [tool.pytest.ini_options]
 asyncio_mode = "strict"
 minversion = "7.0"
-addopts = ["-ra", "--strict-markers", "--strict-config"]
+addopts = [ "-ra", "--strict-markers", "--strict-config" ]
 xfail_strict = true
-filterwarnings = ["error"]
+filterwarnings = [ "error" ]
 log_cli_level = "info"
-pythonpath = ["src"]
-testpaths = ["tests"]
+pythonpath = [ "src" ]
+testpaths = [ "tests" ]
 
 [tool.pycln]
 path = "/pytoil"
@@ -131,4 +139,4 @@ all = true
 no_gitignore = false
 
 [tool.bandit]
-skips = ["B105", "B106"]
+skips = [ "B105", "B106" ]
