--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -55,25 +55,6 @@ jobs:
         with:
           files: ./coverage.xml
 
-  lint:
-    name: Lint
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
-      - name: Set up Python 3.10
-        uses: actions/setup-python@v3
-        with:
-          python-version: "3.10"
-      - name: Install Dependencies
-        run: |
-          python3 -m pip install --upgrade pip setuptools wheel
-          python3 -m pip install nox
-
-      - name: Lint
-        run: nox --non-interactive --session "lint"
-
   docs:
     name: Docs
     runs-on: ubuntu-latest
@@ -121,7 +102,7 @@ jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
-    needs: [test, lint, docs, publish-docs, codecov]
+    needs: [test, docs, publish-docs, codecov]
     if: github.event_name == 'push' && contains(github.ref, 'refs/tags/')
     steps:
       - name: Checkout Code
