Enable pytoil new to use copier templates

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
   "anyio==3.6.1",
   "asyncclick==8.0.3.2",
   "cookiecutter==2.1.1",
+  "copier==6",
   "httpx[http2]==0.23",
   "humanize==4.1",
   "pydantic==1.9.1",
