--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,12 +20,10 @@ maintainers = [ { name = "Tom Fleet" }, { email = "tomfleet2018@gmail.com" } ]
 authors = [ { name = "Tom Fleet" }, { email = "tomfleet2018@gmail.com" } ]
 requires-python = ">=3.9"
 dependencies = [
-  "aiofiles==0.8",
-  "anyio==3.6.1",
-  "asyncclick==8.0.3.2",
+  "click==8.1.3",
   "cookiecutter==2.1.1",
   "copier==6",
-  "httpx[http2]==0.23",
+  "httpx==0.23",
   "humanize==4.1",
   "pydantic==1.9.1",
   "PyYAML==6",
@@ -67,13 +65,11 @@ dev = [
   "nox==2022.1.7",
   "pre-commit==2.19",
   "pytest==7.1.2",
-  "pytest-asyncio==0.18.3",
   "pytest-clarity==1.0.1",
   "pytest-cov==3",
   "pytest-httpx==0.21",
   "pytest-mock==3.7",
   "pytest-randomly==3.12",
-  "types-aiofiles==0.8.8",
   "types-click==7.1.8",
   "types-PyYAML==6.0.8",
 ]
@@ -126,7 +122,6 @@ module = "tests.*"
 ignore_errors = true
 
 [tool.pytest.ini_options]
-asyncio_mode = "strict"
 minversion = "7.0"
 addopts = [ "-ra", "--strict-markers", "--strict-config" ]
 xfail_strict = true
