--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [build-system]
-build-backend = "setuptools.build_meta"
+build-backend = "flit_core.buildapi"
 requires = [
-  "setuptools>=61",
+  "flit_core>=3.2",
 ]
 
 [project]
@@ -82,11 +82,6 @@ Source = "https://github.com/FollowTheProcess/pytoil"
 [project.scripts]
 pytoil = "pytoil.cli.root:main"
 
-
-[tool.setuptools]
-zip-safe = false
-include-package-data = true
-package-data = { "pytoil" = [ "py.typed" ] }
 
 [tool.isort]
 profile = "black"
