--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,18 +20,19 @@ maintainers = [ { name = "Tom Fleet" }, { email = "tomfleet2018@gmail.com" } ]
 authors = [ { name = "Tom Fleet" }, { email = "tomfleet2018@gmail.com" } ]
 requires-python = ">=3.9"
 dependencies = [
+  "chardet==4", # Remove this when requests 2.28.1 comes out
   "click==8.1.3",
   "cookiecutter==2.1.1",
   "copier==6.1",
   "httpx==0.23",
-  "humanize==4.2",
+  "humanize==4.2.2",
   "pydantic==1.9.1",
   "PyYAML==6",
   "questionary==1.10",
   "rich==12.4.4",
   "rtoml==0.8",
   "thefuzz[speedup]==0.19",
-  "virtualenv==20.14.1",
+  "virtualenv==20.15.1",
 ]
 classifiers = [
   "Development Status :: 3 - Alpha",
@@ -53,14 +54,14 @@ classifiers = [
 ]
 [project.optional-dependencies]
 dev = [
-  "black==22.3",
+  "black==22.6",
   "coverage[toml]==6.4.1",
   "flake8==4.0.1",
-  "flake8-bugbear==22.4.25",
+  "flake8-bugbear==22.6.22",
   "freezegun==1.2.1",
   "isort==5.10.1",
   "mkdocs==1.3",
-  "mkdocs-material==8.3.6",
+  "mkdocs-material==8.3.8",
   "mypy==0.961",
   "nox==2022.1.7",
   "pre-commit==2.19",
@@ -68,10 +69,10 @@ dev = [
   "pytest-clarity==1.0.1",
   "pytest-cov==3",
   "pytest-httpx==0.21",
-  "pytest-mock==3.7",
+  "pytest-mock==3.8.1",
   "pytest-randomly==3.12",
   "types-click==7.1.8",
-  "types-PyYAML==6.0.8",
+  "types-PyYAML==6.0.9",
 ]
 
 [project.urls]
