--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [build-system]
-build-backend = "flit_core.buildapi"
+build-backend = "hatchling.build"
 requires = [
-  "flit_core>=3.2",
+  "hatchling",
 ]
 
 [project]
@@ -22,16 +22,16 @@ requires-python = ">=3.9"
 dependencies = [
   "click==8.1.3",
   "cookiecutter==2.1.1",
-  "copier==6.1",
+  "copier==6.2",
   "httpx==0.23",
-  "humanize==4.3",
-  "pydantic==1.9.2",
+  "humanize==4.4",
+  "pydantic==1.10.2",
   "PyYAML==6",
   "questionary==1.10",
-  "rich==12.5.1",
+  "rich==12.6",
   "rtoml==0.8",
   "thefuzz[speedup]==0.19",
-  "virtualenv==20.16.3",
+  "virtualenv==20.16.5",
 ]
 classifiers = [
   "Development Status :: 3 - Alpha",
@@ -53,25 +53,25 @@ classifiers = [
 ]
 [project.optional-dependencies]
 dev = [
-  "black==22.6",
-  "coverage[toml]==6.4.4",
+  "black==22.10",
+  "coverage[toml]==6.5",
   "flake8==5.0.4",
-  "flake8-bugbear==22.8.23",
+  "flake8-bugbear==22.9.23",
   "freezegun==1.2.2",
   "isort==5.10.1",
-  "mkdocs==1.3.1",
-  "mkdocs-material==8.4.2",
-  "mypy==0.971",
+  "mkdocs==1.4",
+  "mkdocs-material==8.5.6",
+  "mypy==0.982",
   "nox==2022.8.7",
   "pre-commit==2.20",
-  "pytest==7.1.2",
+  "pytest==7.1.3",
   "pytest-clarity==1.0.1",
-  "pytest-cov==3",
+  "pytest-cov==4",
   "pytest-httpx==0.21",
-  "pytest-mock==3.8.2",
+  "pytest-mock==3.10",
   "pytest-randomly==3.12",
   "types-click==7.1.8",
-  "types-PyYAML==6.0.11",
+  "types-PyYAML==6.0.12",
 ]
 
 [project.urls]
