--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -66,6 +66,11 @@ repos:
           - flake8-bugbear
           - flake8-comprehensions
 
+  - repo: https://github.com/charliermarsh/ruff-pre-commit
+    rev: v0.0.82
+    hooks:
+      - id: lint
+
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v0.982
     hooks:
