Add ruff as a linter (#718)
* Add ruff as a linter

* Solve TypeAlias issue in 3.9

* Solve TypeAlias issue in 3.9

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ dependencies = [
   "rich==12.6",
   "rtoml==0.8",
   "thefuzz[speedup]==0.19",
+  'typing_extensions==4.4; python_version <= "3.9"',
   "virtualenv==20.16.6",
 ]
 classifiers = [
@@ -70,6 +71,7 @@ dev = [
   "pytest-httpx==0.21.1",
   "pytest-mock==3.10",
   "pytest-randomly==3.12",
+  "ruff==0.0.82",
   "types-click==7.1.8",
   "types-PyYAML==6.0.12.1",
 ]
@@ -102,7 +104,7 @@ exclude_lines = [ "# pragma: no cover", "def __repr__" ]
 
 [tool.mypy]
 files = [ "src/**/*.py", "noxfile.py" ]
-python_version = "3.9"
+python_version = "3.10"
 ignore_missing_imports = true
 strict = true
 pretty = true
@@ -124,6 +126,23 @@ filterwarnings = [ "error" ]
 log_cli_level = "info"
 pythonpath = [ "src" ]
 testpaths = [ "tests" ]
+
+[tool.ruff]
+line-length = 120
+extend-select = [
+  # https://github.com/charliermarsh/ruff#supported-rules
+  "U001",
+  "U002",
+  "U003",
+  "U004",
+  "U005",
+  "U006",
+  "U008",
+  "B011",
+  "B014",
+  "B025",
+]
+
 
 [tool.pycln]
 path = "/src"
