--- a/.tag.toml
+++ b/.tag.toml
@@ -1,5 +1,11 @@
 [tag]
-files = [
-    { path = "src/pytoil/__init__.py", search = '__version__ = "{{.Current}}"', replace = '__version__ = "{{.Next}}"' },
-    { path = "pyproject.toml", search = 'version = "{{.Current}}"', replace = 'version = "{{.Next}}"' },
-]
+
+[[files]]
+path = "src/pytoil/__init__.py"
+search = '__version__ = "{{.Current}}"'
+replace = '__version__ = "{{.Next}}"'
+
+[[files]]
+path = "pyproject.toml"
+search = 'version = "{{.Current}}"'
+replace = 'version = "{{.Next}}"'
