Fix tag config TOML issue

--- a/.tag.toml
+++ b/.tag.toml
@@ -1,11 +1,9 @@
-[tag]
-
-[[files]]
+[[tag.files]]
 path = "src/pytoil/__init__.py"
 search = '__version__ = "{{.Current}}"'
 replace = '__version__ = "{{.Next}}"'
 
-[[files]]
+[[tag.files]]
 path = "pyproject.toml"
 search = 'version = "{{.Current}}"'
 replace = 'version = "{{.Next}}"'
