--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,7 @@ classifiers = [
 [project.optional-dependencies]
 dev = [
   "black==22.10",
+  "build==0.9",
   "coverage[toml]==6.5",
   "flake8==6",
   "flake8-bugbear==22.10.27",
