--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,7 +27,7 @@ repos:
       - id: trailing-whitespace
 
   - repo: https://github.com/asottile/pyupgrade
-    rev: v3.2.2
+    rev: v3.2.3
     hooks:
       - id: pyupgrade
         args:
@@ -53,23 +53,10 @@ repos:
         args:
           - --all
 
-  - repo: https://github.com/asottile/yesqa
-    rev: v1.4.0
-    hooks:
-      - id: yesqa
-
-  - repo: https://github.com/pycqa/flake8
-    rev: 6.0.0
-    hooks:
-      - id: flake8
-        additional_dependencies:
-          - flake8-bugbear
-          - flake8-comprehensions
-
   - repo: https://github.com/charliermarsh/ruff-pre-commit
-    rev: v0.0.82
+    rev: v0.0.146
     hooks:
-      - id: lint
+      - id: ruff
 
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v0.991
