--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,7 +72,7 @@ dev = [
   "pytest-httpx==0.21.2",
   "pytest-mock==3.10",
   "pytest-randomly==3.12",
-  "ruff==0.0.151",
+  "ruff==0.0.155",
   "types-click==7.1.8",
   "types-PyYAML==6.0.12.2",
 ]
@@ -135,12 +135,12 @@ line-length = 120
 extend-select = [
   # https://github.com/charliermarsh/ruff#supported-rules
   "W",   # Pycodestyle warnings
-  "U",   # All pyupgrade rules
+  "UP",  # All pyupgrade rules
   "N",   # PEP8 naming
   "C",   # Flake8 comprehensions
   "ERA", # Commented out code
   "B",   # Flake8 bugbear
-  "M",   # Unused noqa
+  "RUF", # Unused noqa
 ]
 
 [tool.ruff.mccabe]
