--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,8 +16,8 @@ keywords = [
   "python",
 ]
 license = { text = "Apache Software License 2.0" }
-maintainers = [ { name = "Tom Fleet" }, { email = "tomfleet2018@gmail.com" } ]
-authors = [ { name = "Tom Fleet" }, { email = "tomfleet2018@gmail.com" } ]
+maintainers = [{ name = "Tom Fleet" }, { email = "tomfleet2018@gmail.com" }]
+authors = [{ name = "Tom Fleet" }, { email = "tomfleet2018@gmail.com" }]
 requires-python = ">=3.9"
 dependencies = [
   "click==8.1.3",
@@ -72,7 +72,7 @@ dev = [
   "pytest-httpx==0.21.2",
   "pytest-mock==3.10",
   "pytest-randomly==3.12",
-  "ruff==0.0.223",
+  "ruff==0.0.229",
   "types-click==7.1.8",
   "types-PyYAML==6.0.12.2",
 ]
@@ -90,7 +90,7 @@ pytoil = "pytoil.cli.root:main"
 profile = "black"
 
 [tool.coverage.run]
-plugins = [ "covdefaults" ]
+plugins = ["covdefaults"]
 omit = [
   "src/pytoil/cli/*.py",
   "src/pytoil/starters/base.py",
@@ -99,13 +99,10 @@ omit = [
 
 [tool.coverage.report]
 fail_under = 95
-exclude_lines = [
-  "def __repr__",
-  "except ImportError",
-]
+exclude_lines = ["def __repr__", "except ImportError"]
 
 [tool.mypy]
-files = [ "src/**/*.py", "noxfile.py" ]
+files = ["src/**/*.py", "noxfile.py"]
 python_version = "3.11"
 ignore_missing_imports = true
 strict = true
@@ -114,7 +111,7 @@ disallow_untyped_decorators = false
 plugins = "pydantic.mypy"
 show_error_codes = true
 warn_unreachable = true
-enable_error_code = [ "ignore-without-code", "redundant-expr", "truthy-bool" ]
+enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
 
 [[tool.mypy.overrides]]
 module = "tests.*"
@@ -122,15 +119,15 @@ ignore_errors = true
 
 [tool.pytest.ini_options]
 minversion = "7.0"
-addopts = [ "-ra", "--strict-markers", "--strict-config" ]
+addopts = ["-ra", "--strict-markers", "--strict-config"]
 xfail_strict = true
 filterwarnings = [
   "error",
   "ignore::DeprecationWarning", # DeprecationWarning: read_binary is deprecated. Use files() instead. Comes from virtualenv
 ]
 log_cli_level = "info"
-pythonpath = [ "src" ]
-testpaths = [ "tests" ]
+pythonpath = ["src"]
+testpaths = ["tests"]
 
 [tool.ruff]
 line-length = 120
