--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 ci:
-  autoupdate_commit_msg: "chore: update pre-commit hooks"
-  autofix_commit_msg: "style: pre-commit fixes"
+  autoupdate_commit_msg: "chore: Update pre-commit hooks"
+  autofix_commit_msg: "style: Pre-commit fixes"
 
 repos:
   - repo: https://github.com/psf/black
@@ -9,11 +9,6 @@ repos:
       - id: black
         args:
           - --preview
-
-  - repo: https://github.com/asottile/blacken-docs
-    rev: 1.13.0
-    hooks:
-      - id: blacken-docs
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.4.0
@@ -26,35 +21,21 @@ repos:
       - id: mixed-line-ending
       - id: trailing-whitespace
 
-  - repo: https://github.com/asottile/pyupgrade
-    rev: v3.3.1
-    hooks:
-      - id: pyupgrade
-        args:
-          - --py39-plus
-
   - repo: https://github.com/tox-dev/pyproject-fmt
     rev: "0.5.0"
     hooks:
       - id: pyproject-fmt
 
   - repo: https://github.com/PyCQA/isort
-    rev: "5.11.4"
+    rev: "5.12.0"
     hooks:
       - id: isort
         args:
-          - -a
+          - --add
           - from __future__ import annotations
 
-  - repo: https://github.com/hadialqattan/pycln
-    rev: v2.1.3
-    hooks:
-      - id: pycln
-        args:
-          - --all
-
   - repo: https://github.com/charliermarsh/ruff-pre-commit
-    rev: v0.0.230
+    rev: v0.0.237
     hooks:
       - id: ruff
 
@@ -65,22 +46,8 @@ repos:
         args:
           - --config-file
           - pyproject.toml
-        additional_dependencies:
-          - "types-PyYAML"
-          - "types-click"
-          - "pydantic"
-
-  - repo: https://github.com/pre-commit/pygrep-hooks
-    rev: v1.10.0
-    hooks:
-      - id: python-check-blanket-noqa
-      - id: python-use-type-annotations
 
   - repo: https://github.com/codespell-project/codespell
     rev: v2.2.2
     hooks:
       - id: codespell
-        args:
-          - "-L Ines,ines"
-          - "--skip"
-          - "*.svg"
