--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,8 +1,9 @@
 name: 🐞 Bug Report
 description: File a bug/issue
-title: "[BUG] <title>"
+title: "<title>"
 labels:
-  - "bug"
+  - bug
+
 body:
   - type: checkboxes
     attributes:
@@ -11,18 +12,21 @@ body:
       options:
         - label: I have searched the existing issues
           required: true
+
   - type: textarea
     attributes:
       label: Current Behavior
       description: A concise description of what you're experiencing.
     validations:
       required: false
+
   - type: textarea
     attributes:
       label: Expected Behavior
       description: A concise description of what you expected to happen.
     validations:
       required: false
+
   - type: textarea
     attributes:
       label: Steps To Reproduce
@@ -34,21 +38,16 @@ body:
         4. See error...
     validations:
       required: false
+
   - type: textarea
     attributes:
       label: Environment
       description: |
-        examples:
-          - **OS**: Ubuntu 20.04
-          - **Python**: 3.9.7
-          - **pytoil**: 0.6.0
-      value: |
-        - OS:
-        - Python:
-        - pytoil:
+        Please describe your execution environment providing as much detail as possible
       render: Markdown
     validations:
       required: false
+
   - type: textarea
     attributes:
       label: Anything else?
