--- a/pyproject.toml
+++ b/pyproject.toml
@@ -122,6 +122,7 @@ warn_unreachable = true
 enable_error_code = [ "ignore-without-code", "redundant-expr", "truthy-bool" ]
 
 [tool.ruff]
+target-version = "py39"
 line-length = 120
 select = [
   # https://github.com/charliermarsh/ruff#supported-rules
@@ -139,17 +140,25 @@ select = [
   "YTT", # Flake8 2020
   "ANN", # Type annotations
   "BLE", # No blind excepts
+  "PIE", # Flake8 pie
   "PT",  # Pytest style
   "RET", # Function returns
   "SIM", # Simplify
   "ARG", # Unused arguments
   "PTH", # Use pathlib over os.path
   "PGH", # Pygrep hooks
+  "S",   # Bandit (security)
+  "A",   # Don't shadow builtins
+  "INP", # No implicit namespace packages (causes import errors)
+  "T20", # No print statements
+  "RSE", # When raising an exception chain, use from
+  "SLF", # Flake8-self, private member access
+  "TCH", # Stuff for typing is behind an if TYPE_CHECKING block
 ]
 ignore = [
-  "B905",   # zip() without strict=
-  "ANN101", # Missing type annotation for `self` in method
-  "N999",   # __main__ is not a valid module name
+  "ANN101", # Missing type annotation for self in method
+  "S105",   # Hardcoded passwords (lots of false positives)
+  "S106",   # Hardcoded passwords (again?)
 ]
 
 [tool.ruff.mccabe]
@@ -157,6 +166,20 @@ max-complexity = 15
 
 [tool.ruff.isort]
 required-imports = [ "from __future__ import annotations" ]
+
+[tool.ruff.per-file-ignores]
+"tests/**/*.py" = [
+  "ARG001", # Thinks pytest fixtures are unused arguments
+  "D104",   # Missing docstring in __init__.py in tests (which is fine)
+  "FBT001", # Tests are allowed positional bools (fixtures etc.)
+  "S101",   # Assert is allowed in tests (obviously)
+  "TCH",    # Tests will be run with dev dependencies so we don't care
+  "S",      # Security stuff in tests is fine
+  "SLF001", # Private member access in tests is fine
+]
+"conftest.py" = [
+  "TCH", # Conftest is only run for tests (with dev dependencies)
+]
 
 [tool.codespell]
 skip = "*.svg"
