Move mypy to pre-commit (#892)
* Move mypy to pre-commit

* Fix pre-commit

* Fix pre-commit

* Why is mypy being weird

* Mypy passes locally with this

* Add some type ignores for pre-commit

* Add some type ignores for pre-commit

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -89,7 +89,6 @@ extra-dependencies = [
 check = [
   "pytest --cov ./src ./tests",
   "pre-commit run --all-files",
-  "mypy",
 ]
 
 [tool.hatch.envs.tests]
@@ -111,7 +110,6 @@ dependencies = [
 
 [tool.hatch.envs.tests.scripts]
 run = "pytest --cov ./src ./tests"
-
 cov = [
   "run",
   "coverage xml",
@@ -131,10 +129,7 @@ dependencies = [
 ]
 
 [tool.hatch.envs.lint.scripts]
-run = [
-  "pre-commit run --all-files",
-  "mypy",
-]
+run = "pre-commit run --all-files"
 
 [tool.hatch.envs.docs]
 detached = true
@@ -178,7 +173,7 @@ exclude_lines = [ "def __repr__", "except ImportError" ]
 
 [tool.mypy]
 files = [ "**/*.py" ]
-python_version = "3.9"
+python_version = "3.11"
 ignore_missing_imports = true
 strict = true
 pretty = true
