--- a/.tag.toml
+++ b/.tag.toml
@@ -1,16 +1,14 @@
-version = '0.38.2'
+version = '{{.Next}}'
 
 [git]
 default-branch = 'main'
-message-template = 'Bump version 0.38.1 -> 0.38.2'
-tag-template = 'v0.38.2'
+message-template = 'Bump version {{.Current}} -> {{.Next}}'
+tag-template = 'v{{.Next}}'
 
 [[file]]
 path = 'pyproject.toml'
-search = 'version = "0.38.1"'
-- = 'version = "0.38.2"'
+search = 'version = "{{.Current}}"'
 
 [[file]]
 path = 'src/pytoil/__init__.py'
-search = '__version__ = "0.38.1"'
-- = '__version__ = "0.38.2"'
+search = '__version__ = "{{.Current}}"'
