--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,8 +3,8 @@ ci:
   autofix_commit_msg: "style: Pre-commit fixes"
 
 repos:
-  - repo: https://github.com/psf/black
-    rev: "23.7.0"
+  - repo: https://github.com/psf/black-pre-commit-mirror
+    rev: 23.7.0
     hooks:
       - id: black
         args:
@@ -27,14 +27,14 @@ repos:
       - id: pyproject-fmt
 
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.0.286
+    rev: v0.0.287
     hooks:
       - id: ruff
         args:
           - --fix
 
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: "v1.5.1"
+    rev: v1.5.1
     hooks:
       - id: mypy
         additional_dependencies:
