--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -12,6 +12,11 @@ concurrency:
   group: ${{ github.ref }}
   cancel-in-progress: true
 
+env:
+  DEFAULT_PYTHON: "3.12"
+
+permissions: read-all
+
 jobs:
   test:
     name: Test
@@ -20,15 +25,17 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: ["3.9", "3.10", "3.11"]
+        python-version: ["3.9", "3.10", "3.11", "3.12"]
 
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
+
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
+
       - name: Install Dependencies
         run: python3 -m pip install --upgrade pip hatch
 
@@ -42,10 +49,12 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
-      - name: Set up Python 3.11
+
+      - name: Set up Python ${{ env.DEFAULT_PYTHON }}
         uses: actions/setup-python@v4
         with:
-          python-version: "3.11"
+          python-version: ${{ env.DEFAULT_PYTHON }}
+
       - name: Install Dependencies
         run: python3 -m pip install --upgrade pip hatch
 
@@ -64,10 +73,11 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
-      - name: Set up Python 3.11
+
+      - name: Set up Python ${{ env.DEFAULT_PYTHON }}
         uses: actions/setup-python@v4
         with:
-          python-version: "3.11"
+          python-version: ${{ env.DEFAULT_PYTHON }}
 
       - name: Install Dependencies
         run: python3 -m pip install --upgrade pip hatch
@@ -79,15 +89,20 @@ jobs:
     needs: docs
     name: Publish Docs
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+
     # Only publish docs automatically on new release
     if: github.event_name == 'push' && contains(github.ref, 'refs/tags/')
+
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
-      - name: Set up Python 3.11
+
+      - name: Set up Python ${{ env.DEFAULT_PYTHON }}
         uses: actions/setup-python@v4
         with:
-          python-version: "3.11"
+          python-version: ${{ env.DEFAULT_PYTHON }}
 
       - name: Install Dependencies
         run: python3 -m pip install --upgrade pip hatch
@@ -101,15 +116,36 @@ jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
-    needs: [test, docs, publish-docs, codecov]
+    needs:
+      - test
+      - docs
+      - publish-docs
+      - codecov
+    permissions:
+      contents: write
+      pull-requests: read
+
     if: github.event_name == 'push' && contains(github.ref, 'refs/tags/')
+
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v4
-      - name: Set up Python 3.11
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: Fetch Existing Tags
+        run: git fetch --force --tags
+
+      - name: Parse Release Version
+        id: version
+        run: |
+          VERSION=${GITHUB_REF#refs/tags/v}
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
+
+      - name: Set up Python ${{ env.DEFAULT_PYTHON }}
         uses: actions/setup-python@v4
         with:
-          python-version: "3.11"
+          python-version: ${{ env.DEFAULT_PYTHON }}
 
       - name: Install Dependencies
         run: python3 -m pip install --upgrade pip hatch
@@ -117,16 +153,21 @@ jobs:
       - name: Build sdist and wheel
         run: hatch build
 
+      - name: Publish Draft Release
+        uses: release-drafter/release-drafter@v5
+        with:
+          version: ${{ steps.version.outputs.version }}
+          publish: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Upload Dist
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: gh release upload ${{ github.ref_name }} dist/* --repo ${{ github.repository }}
+
       - name: Publish Distribution to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           user: __token__
           password: ${{ secrets.PYPI_API_TOKEN }}
-
-      - name: Publish Draft Release
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          DRAFT_RELEASE_TAG=$(gh api repos/${{ github.repository }}/releases --jq '.[] | select(.draft==true) | .tag_name')
-          gh release edit $DRAFT_RELEASE_TAG --draft=false --latest --tag ${{ github.ref_name }} --title ${{ github.ref_name }} --repo ${{ github.repository }}
-          gh release upload ${{ github.ref_name }} --repo ${{ github.repository }} dist/*
