--- a/pyproject.toml
+++ b/pyproject.toml
@@ -150,6 +150,8 @@ deploy = "mkdocs gh-deploy --force"
 [tool.ruff]
 target-version = "py39"
 line-length = 120
+
+[tool.ruff.lint]
 select = [
   # https://github.com/charliermarsh/ruff#supported-rules
   "E",   # Pycodestyle errors
@@ -188,13 +190,13 @@ ignore = [
   "S603",   # Subprocess calls
 ]
 
-[tool.ruff.mccabe]
+[tool.ruff.lint.mccabe]
 max-complexity = 15
 
-[tool.ruff.isort]
+[tool.ruff.lint.isort]
 required-imports = [ "from __future__ import annotations" ]
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 "tests/**/*.py" = [
   "ARG001", # Thinks pytest fixtures are unused arguments
   "D104",   # Missing docstring in __init__.py in tests (which is fine)
