--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,26 +53,15 @@ dependencies = [
   'typing_extensions==4.4; python_version <= "3.9"',
   "virtualenv==20.24.6",
 ]
-[project.urls]
-Documentation = "https://FollowTheProcess.github.io/pytoil/"
-Homepage = "https://github.com/FollowTheProcess/pytoil"
-Source = "https://github.com/FollowTheProcess/pytoil"
-[project.scripts]
-pytoil = "pytoil.cli.root:main"
-
-[tool.hatch.envs.default]
-# Include dev dependencies in the default environment
-description = """
-Default environment for development, contains everything
-you need to work on the project, installed by default.
-"""
-extra-dependencies = [
+[project.optional-dependencies]
+dev = [
   "covdefaults",
   "coverage[toml]",
   "freezegun",
   "mkdocs",
   "mkdocs-material",
   "mypy",
+  "nox",
   "pre-commit",
   "pytest",
   "pytest-clarity",
@@ -84,68 +73,12 @@ extra-dependencies = [
   "types-click",
   "types-PyYAML",
 ]
-
-[tool.hatch.envs.default.scripts]
-check = [
-  "pytest --cov ./src ./tests",
-  "pre-commit run --all-files",
-]
-
-[tool.hatch.envs.tests]
-template = "tests" # Don't inherit from default
-description = """
-Environment for running tests, contains only the
-test dependencies and installs the project.
-"""
-dependencies = [
-  "pytest",
-  "pytest-cov",
-  "pytest-mock",
-  "pytest-httpx",
-  "pytest-randomly",
-  "covdefaults",
-  "freezegun",
-  "coverage[toml]",
-]
-
-[tool.hatch.envs.tests.scripts]
-run = "pytest --cov ./src ./tests"
-cov = [
-  "run",
-  "coverage xml",
-]
-
-[tool.hatch.envs.lint]
-detached = true
-description = """
-Environment for running linters, contains only the linting
-dependencies and does not install the project.
-"""
-dependencies = [
-  "pre-commit",
-  "mypy",
-  "pydantic",
-  "types-PyYAML",
-]
-
-[tool.hatch.envs.lint.scripts]
-run = "pre-commit run --all-files"
-
-[tool.hatch.envs.docs]
-detached = true
-description = """
-Environment for building and serving docs, contains only
-the docs dependencies and does not install the project.
-"""
-dependencies = [
-  "mkdocs",
-  "mkdocs-material",
-]
-
-[tool.hatch.envs.docs.scripts]
-build = "mkdocs build --clean"
-serve = "mkdocs serve"
-deploy = "mkdocs gh-deploy --force"
+[project.urls]
+Documentation = "https://FollowTheProcess.github.io/pytoil/"
+Homepage = "https://github.com/FollowTheProcess/pytoil"
+Source = "https://github.com/FollowTheProcess/pytoil"
+[project.scripts]
+pytoil = "pytoil.cli.root:main"
 
 [tool.ruff]
 target-version = "py39"
