--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,35 +56,15 @@ dependencies = [
   "rich==13.7.1",
   "rtoml==0.11",
   "thefuzz[speedup]==0.22.1",
-  "typing-extensions==4.8; python_version<='3.9'",
   "virtualenv==20.26.3",
 ]
-optional-dependencies.dev = [
-  "covdefaults",
-  "coverage[toml]",
-  "freezegun",
-  "mkdocs",
-  "mkdocs-material",
-  "mypy",
-  "nox",
-  "pre-commit",
-  "pytest",
-  "pytest-clarity",
-  "pytest-cov",
-  "pytest-httpx",
-  "pytest-mock",
-  "pytest-randomly",
-  "ruff",
-  "types-click",
-  "types-pyyaml",
-]
+
 urls.Documentation = "https://FollowTheProcess.github.io/pytoil/"
 urls.Homepage = "https://github.com/FollowTheProcess/pytoil"
 urls.Source = "https://github.com/FollowTheProcess/pytoil"
 scripts.pytoil = "pytoil.cli.root:main"
 
 [tool.ruff]
-target-version = "py39"
 line-length = 120
 
 lint.select = [
@@ -199,4 +179,25 @@ enable_error_code = [
   "ignore-without-code",
   "redundant-expr",
   "truthy-bool",
+]
+
+[tool.uv]
+dev-dependencies = [
+  "covdefaults",
+  "coverage[toml]",
+  "freezegun",
+  "mkdocs",
+  "mkdocs-material",
+  "mypy",
+  "nox",
+  "pre-commit",
+  "pytest",
+  "pytest-clarity",
+  "pytest-cov",
+  "pytest-httpx",
+  "pytest-mock",
+  "pytest-randomly",
+  "ruff",
+  "types-click",
+  "types-pyyaml",
 ]
